2008-07-22  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-index.c:
	Use the new TrackerIndexItem instead old duplicate code.
	
2008-07-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-dbus.h:
	* src/trackerd/tracker-indexer.h:

	Moving some code around

2008-06-22  Ivan Frade  <ivan.frade@nokia.com>

	* tests/trackerd/example.index: Small QDBM index to use in tests.
	
	* tests/trackerd/run-tests.sh (removed)
	* configure.ac: Create symbolic links in autoconf instead a bash
	script.
	
2008-07-22  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-indexer.c:
	* src/trackerd/tracker-search.c:
	* src/trackerd/tracker-keywords.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-utils.c:

	Wrapped all database access in the DBus implementations with two 
	convenient functions. 

2008-07-22  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/Makefile.am
	* src/libtracker-common/tracker-index-item.[ch]:
	Common struct to write and read in the index.

	* src/trackerd/tracker-query-tree.c
	* tests/tracker-indexer/tracker-index-test.c: Updated to use the
	new index-item struct.
	
	* src/libtracker-db/tracker-db-manager.[ch]:
	(tracker_db_manager_are_db_too_big): Moved code here. It looks
	like nobody uses this function.
	
	* src/trackerd/Makefile.am
	* src/trackerd/tracker-index-manager.[ch]:
	New module to handle indexes and their directories.
	
	* src/trackerd/tracker-indexer.[ch]
	Refactored GObject representing one index.
	
	* src/trackerd/tracker-main.c: added _init and _shutdown to the
	new index manager.

	* tests/trackerd/Makefile.am
	* tests/trackerd/run-tests.sh: Script to compile the test for
	trackerd modules. Ugly but the only fast and easy solution.
	* tests/trackerd/tracker-indexer-test.c: Test for the new object	
	
2008-07-22  Martyn Russell  <martyn@imendio.com>
